[package]
name = "web2303"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
derive_builder = "0.12.0"
log = "0.4.17"
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.19"
simple_logger = "4.1.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
